--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,13 +43,13 @@ p.intro {
   line-height: 24px;
 }
 a {
-  color: #608dfd;
+  color: orangered;
   font-weight: 400;
 }
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #608dfd;
+  color: orangered;
 }
 ul,
 ol {
@@ -81,12 +81,26 @@ hr {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 #menu a.navbar-brand {
-  font-family: "Raleway", sans-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: #333;
-  text-transform: uppercase;
+  padding: 0;
 }
+
+#menu a.navbar-brand i.fa {
+  font-size: 80px;
+  transition: all 0.5s;
+  color: #fff;
+  width: 100px;
+  height: 100px;
+  padding: 10px 10px;
+  border-radius: 50%;
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
+  color: orangered;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+
+#menu a.navbar-brand i.fa span {
+  font-size: 30px;
+}
+
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
@@ -104,7 +118,7 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
   content: "";
   transition: width 0.2s;
 }
@@ -125,7 +139,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%) !important;
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -135,10 +149,10 @@ hr {
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #fff;
-  border-color: #608dfd;
+  border-color: orangered;
 }
 .navbar-default .navbar-toggle:hover > .icon-bar {
-  background-color: #608dfd;
+  background-color: orangered;
 }
 .section-title {
   margin-bottom: 70px;
@@ -152,7 +166,7 @@ hr {
 .section-title h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #8d8f90 0%, #5c5d64 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -166,8 +180,8 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #8d8f90;
+  background-image: linear-gradient(to right, #8d8f90 0%, #5c5d64 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -184,7 +198,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #5c5d64;
 }
 .btn:active,
 .btn.active {
@@ -220,7 +234,7 @@ a:focus,
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: orangered;
   font-size: 82px;
   font-weight: 700;
   text-transform: uppercase;
@@ -229,7 +243,7 @@ a:focus,
 }
 .intro h1 span {
   font-weight: 800;
-  color: #5ca9fb;
+  color: #8d8f90;
 }
 .intro p {
   color: #fff;
@@ -246,8 +260,14 @@ header .intro-text {
 }
 /* Features Section */
 #features {
+  margin-top: 50px;
   background: #f6f6f6;
 }
+
+.features-title {
+  display: none;
+}
+
 #features i.fa {
   font-size: 38px;
   margin-bottom: 20px;
@@ -256,8 +276,9 @@ header .intro-text {
   width: 100px;
   height: 100px;
   padding: 30px 0;
-  border-radius: 50%;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  border-radius: 30%;
+  color: orangered;
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 /* About Section */
@@ -276,7 +297,7 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #8d8f90 0%, #5c5d64 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -291,7 +312,7 @@ header .intro-text {
 #about .about-text li:before {
   content: "\f00c";
   font-family: "FontAwesome";
-  color: #5ca9fb;
+  color: #8d8f90;
   font-size: 11px;
   font-weight: 300;
   padding-right: 8px;
@@ -310,7 +331,7 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
   color: #fff;
 }
 #services .service-desc {
@@ -334,9 +355,10 @@ header .intro-text {
   width: 120px;
   height: 120px;
   padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
   border-radius: 50%;
   color: #fff;
+  color: orangered;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 #services h3 {
@@ -460,7 +482,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
@@ -580,7 +602,7 @@ label {
   transition: all 0.3s;
 }
 #contact .social i.fa:hover {
-  color: #608dfd;
+  color: orangered;
   background: #fff;
 }
 /* Footer Section*/
@@ -593,10 +615,10 @@ label {
   font-size: 14px;
 }
 #footer a {
-  color: #608dfd;
+  color: orangered;
 }
 #footer a:hover {
-  border-bottom: 2px solid #608dfd;
+  border-bottom: 2px solid orangered;
 }
 
 @media (max-width: 768px) {
