--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,11 +85,11 @@ hr {
 }
 
 #menu a.navbar-brand i.fa {
-  font-size: 80px;
+  font-size: 50px;
   transition: all 0.5s;
   color: #fff;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   padding: 10px 10px;
   border-radius: 50%;
   background: linear-gradient(to right, #5c5d64 0%, #8d8f90 100%);
@@ -222,8 +222,8 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
-  background-color: #e5e5e5;
+  background: linear-gradient(to left bottom, rgba(47, 48, 58, 0.5), rgba(47, 48, 58, 0.4)),url(../img/intro-bg.jpg) center center no-repeat;
+  background-color: #ddd0d0;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
